feat: support thumbnail to round

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -187,6 +187,10 @@
   display: grid;
   margin-bottom: 30px;
 
+  .round {
+    border-radius: 50%;
+  }
+
   &.no-thumbnail {
     display: flex;
   }
@@ -315,6 +319,10 @@
         align-items: start;
         padding: 1.5rem 2rem;
         margin: 0 -2rem;
+
+        .round {
+          border-radius: 50%;
+        }
 
         &:hover {
           border-radius: $border-radius;
