--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1103,14 +1103,14 @@ button[disabled] {
   margin: 2rem 0;
   padding: 1.5rem;
   text-align: center;
-  background: radial-gradient(circle at 20% 20%, #5183f5 25%, #4640ff 100%);
-  box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(100, 110, 140, 0.4);
+  background: radial-gradient(circle at 20% 20%, #f58874 25%, #fa0324 100%);
+  box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(235, 156, 143, 0.4);
   color: rgba(255, 255, 255, 0.9);
 
   .newsletter-avatar {
-    margin-top: 0.5rem;
+    margin: 0.5rem 0 1.5rem;
     border-radius: 50%;
-    width: 85px;
+    width: 150px;
   }
 
   p {
@@ -1119,7 +1119,7 @@ button[disabled] {
   }
 
   h3 {
-    margin: 0 0 0.75rem;
+    margin: 0 0 0.35rem;
     font-size: 1.5rem;
     font-weight: 600;
     color: white !important;
